# spot

./: .replit  README.md  current-issues.md  pyproject.toml  replit.md
attached_assets/: Pasted-Perfect-summary-Your-app-is-running-well-The-errors-are-just-missing-template-pages-that-haven-t-b-1764418866602_1764418866602.txt
backend/: add_category_column.py  config.py  requirements.txt  run.py
backend/app/: __init__.py
backend/app/models/: __init__.py  customer.py  order_service.py  payment.py  service.py  service_order.py  staff_assignment.py  user.py  vehicle.py
backend/app/routes/: __init__.py  api.py  auth.py  main.py
backend/instance/: car_wash.db
frontend/static/css/: app.css
frontend/static/js/: app.js  sw.js
frontend/templates/: base.html  dashboard.html  queue.html  settings.html
frontend/templates/auth/: login.html  profile.html
frontend/templates/customers/: index.html  view.html
frontend/templates/errors/: 404.html  500.html
frontend/templates/orders/: new.html  view.html
frontend/templates/payments/: index.html
frontend/templates/reports/: index.html
frontend/templates/services/: index.html
frontend/templates/staff/: index.html
frontend/templates/vehicles/: index.html
