[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "bcrypt==4.0.1",
    "flask==2.3.3",
    "flask-cors==4.0.0",
    "flask-login==0.6.3",
    "flask-migrate==4.0.5",
    "flask-sqlalchemy==3.0.5",
    "flask-wtf==1.1.1",
    "marshmallow==3.20.1",
    "pytest==7.4.2",
    "pytest-flask==1.2.0",
    "python-dateutil==2.8.2",
    "sqlalchemy==2.0.21",
    "werkzeug==2.3.7",
]
